Fixed cross browser z-index issue

--- a/less/deck/dialog.less
+++ b/less/deck/dialog.less
@@ -14,7 +14,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 9000;
+  z-index: 9001;
   pointer-events: none;
 }
 
